force-app/main/default/objects/Asset_Finance_AMBIT_Repayment__x/Asset_Finance_AMBIT_Repayment__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AFAMBITRepayment</externalName>
    <label>Asset Finance AMBIT Repayment</label>
    <pluralLabel>Asset Finance AMBIT Repayments</pluralLabel>
</CustomObject>