force-app/main/default/objects/Asset_Finance_AMBIT_Repayment__x/fields/Repayment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Account_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Repayment Account Number</description>
    <externalDeveloperName>RepaymentAccountNumber</externalDeveloperName>
    <label>Repayment Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>