force-app/main/default/objects/Asset_Finance_AMBIT_Repayment__x/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Sequence</description>
    <label>Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>